[package]
name = "worldgen"
version = "0.3.0"
edition = "2021"

[dependencies]
eframe = "0.19.*"
egui_extras = { version = "0.19.*", features = ["image"] }
epaint = "0.19.*"
egui_glow = "0.19.*"
glow = "0.11"
three-d = { version = "0.11", default-features = false }
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg"
] }
rand = "0.7.3"
noise = { version = "*", default-features = false }
serde = { version = "1.0", features = ["derive"] }
ron = "0.7"
num_cpus = "1.*"
rfd = "0.10"
